This file contain the log of changes for the main development branch (trunk).
More detailed information about incremental changes can be found in the
history management of subversion.

2017-xx-yy releases/3.12.8
        - add define for FORTRAN_INTEGER_TYPE to config_ipopt_default.h

2017-02-25 releases/3.12.7
        - removed compiler flag -pedantic-errors to avoid problems with some
          configure tests when using recent GCC versions
        - fixed rare bug in handling variable/constraint names in AmplTNLP
          (by G. Hackebeil) [r2673]
        - the get.Mumps script in ThirdParty/Mumps now renames libseq/mpi.h
          to libseq/mumps_mpi.h to avoid conflicts when building in a MPI
          environment (by T. Ralphs); note that if updating an existing
          checkout/download of Ipopt, you may have to rerun get.Mumps

2016-07-20 releases/3.12.6
        - better support for custom algorithm development [r2659]
          (by Gabriel Hackebeil) https://github.com/coin-or/Ipopt/pull/5:
          "Reorganization of the AlgorithmBuilder class to allow easier
          customization of the Ipopt algorithm. In particular, we wanted to
          make use of the code that creates the SymLinearSolver object to
          implement our own SymLinearSolver without copy-pasting everything
          in AlgorithmBuilder.
          AlgorithmBuilder::BuildBasicAlgorithm now consists of 8 method calls
          that build the core components passed into the arguments of the
          IpoptAlgorithm class. These calls are ordered based on any dependencies
          they might have. In addition, all code for creating the PDSystemSolver,
          AugSystemSolver, and SymLinearSolver has been moved into separate factory
          methods.
          Also, included is a change to install a few more header files with Ipopt.
          Some of these are required to subclass AlgorithmBuilder, and the others
          are simply some matrix types that we require."